Added -f to man page

--- a/mtm.1
+++ b/mtm.1
@@ -88,6 +88,8 @@ Delete the currently focused terminal.
 .It Em "l"
 .Pq "the letter ell"
 Redraw the screen.
+.It Em "f"
+Toggle Full screen.
 .It Em "PgUp/PgDown/End"
 Scroll the terminal up/down/to the bottom.
 By default,
